--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -302,14 +302,14 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 200px;
         padding-bottom: 200px;
     }
 
     header .intro-text .intro-lead-in {
-        margin-bottom: 25px;
+        margin-bottom: 35px;
         font-family: {{ site.data.template.font.secondary }};
-        font-size: 40px;
+        font-size: 30px;
         font-style: italic;
         line-height: 40px;
     }
@@ -321,6 +321,10 @@ header .intro-text .intro-heading {
         font-size: 75px;
         font-weight: 700;
         line-height: 75px;
+    }
+
+    .header-logo {
+      height: 50px;
     }
 }
 
