Keeping Will Happy

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -234,6 +234,12 @@ fieldset[disabled] .btn-xl.active {
     background-color: #{{ site.data.template.color.secondary }};
 }
 
+@media(max-width:768px) {
+  .intro-logo {
+    width: 100%;
+  }
+  }
+
 @media(min-width:768px) {
     .navbar-default {
         padding: 25px 0;
@@ -280,7 +286,11 @@ header {
 
 header .intro-text {
     padding-top: 100px;
-    padding-bottom: 50px;
+}
+
+.intro-logo {
+  width: 50%;
+  padding: 40px 0px;
 }
 
 header .intro-text .intro-lead-in {
