--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,8 +44,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in"><img src="img/main_logo.svg"></div>
-                <div class="intro-heading">It's Nice To Meet You</div>
+                <div class="intro-lead-in"><img src="img/main_logo.svg" class="intro-logo"></div>
+                <div class="intro-heading">Your Digital Media. Organised.</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
