--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,33 +4,58 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Our services are tailored to support you and your business across multiple mediums and platforms.</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-desktop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
+                    <h4 class="service-heading">Website Design & Development</h4>
+                    <p class="text-muted">We can build the vision you have for your website. We believe in beautiful, functional websites that communicate your branding. There are more businesses online than ever before; we can make yours stands out with a site that’s good-looking, up-to-date and easy to manage. We work with Wordpress, WooCommerce, Squarespace, Magento and Shopify. Not sure what you need? We’ll get to know your business and market, review your requirements and budgets and then plan a website that works for you. We can recommend the best platform for your business or we can build a bespoke site.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Design</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
+                    <h4 class="service-heading">Social Media</h4>
+                    <p class="text-muted">There’s an art to using social media for business and we’ve mastered it. Using basic principles and our up-to-the-minute knowledge of the ever-evolving online trends, we ensure that the right message gets to the right people, turning your social followers into customers. We create effective social media strategies, driven by results and provide you with tracking and analytics so that you can see what’s working for your business.<br><br>We can tailor our social media services for your needs: from complete social media management packages where we curate, create and posting everything on your social media to social media training sessions for you team.</p>
+                </div>
+                <div class="col-md-12" style="height:15px;"></div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-desktop fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Website Design & Development</h4>
+                    <p class="text-muted">We can build the vision you have for your website. We believe in beautiful, functional websites that communicate your branding. There are more businesses online than ever before; we can make yours stands out with a site that’s good-looking, up-to-date and easy to manage. We work with Wordpress, WooCommerce, Squarespace, Magento and Shopify. Not sure what you need? We’ll get to know your business and market, review your requirements and budgets and then plan a website that works for you. We can recommend the best platform for your business or we can build a bespoke site.</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Design</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Social Media</h4>
+                    <p class="text-muted">There’s an art to using social media for business and we’ve mastered it. Using basic principles and our up-to-the-minute knowledge of the ever-evolving online trends, we ensure that the right message gets to the right people, turning your social followers into customers. We create effective social media strategies, driven by results and provide you with tracking and analytics so that you can see what’s working for your business.<br><br>We can tailor our social media services for your needs: from complete social media management packages where we curate, create and posting everything on your social media to social media training sessions for you team.</p>
                 </div>
             </div>
         </div>
