--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in"><img src="img/main_logo.svg" class="intro-logo"></div>
                 <div class="intro-heading">Your Digital Media. Organised.</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#services" class="page-scroll btn btn-xl background-margin">Tell Me More</a>
             </div>
         </div>
     </header>
