--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-desktop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Website Design & Development</h4>
-                    <p class="text-muted">We can build the vision you have for your website. We believe in beautiful, functional websites that communicate your branding. There are more businesses online than ever before; we can make yours stands out with a site that’s good-looking, up-to-date and easy to manage. We work with Wordpress, WooCommerce, Squarespace, Magento and Shopify. Not sure what you need? We’ll get to know your business and market, review your requirements and budgets and then plan a website that works for you. We can recommend the best platform for your business or we can build a bespoke site.</p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Social Media</h4>
-                    <p class="text-muted">There’s an art to using social media for business and we’ve mastered it. Using basic principles and our up-to-the-minute knowledge of the ever-evolving online trends, we ensure that the right message gets to the right people, turning your social followers into customers. We create effective social media strategies, driven by results and provide you with tracking and analytics so that you can see what’s working for your business.<br><br>We can tailor our social media services for your needs: from complete social media management packages where we curate, create and posting everything on your social media to social media training sessions for you team.</p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-12" style="height:15px;"></div>
                 <div class="col-md-4">
@@ -39,7 +39,7 @@
                         <i class="fa fa-desktop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Website Design & Development</h4>
-                    <p class="text-muted">We can build the vision you have for your website. We believe in beautiful, functional websites that communicate your branding. There are more businesses online than ever before; we can make yours stands out with a site that’s good-looking, up-to-date and easy to manage. We work with Wordpress, WooCommerce, Squarespace, Magento and Shopify. Not sure what you need? We’ll get to know your business and market, review your requirements and budgets and then plan a website that works for you. We can recommend the best platform for your business or we can build a bespoke site.</p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -55,7 +55,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Social Media</h4>
-                    <p class="text-muted">There’s an art to using social media for business and we’ve mastered it. Using basic principles and our up-to-the-minute knowledge of the ever-evolving online trends, we ensure that the right message gets to the right people, turning your social followers into customers. We create effective social media strategies, driven by results and provide you with tracking and analytics so that you can see what’s working for your business.<br><br>We can tailor our social media services for your needs: from complete social media management packages where we curate, create and posting everything on your social media to social media training sessions for you team.</p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
             </div>
         </div>
