--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -234,12 +234,17 @@ fieldset[disabled] .btn-xl.active {
     background-color: #{{ site.data.template.color.secondary }};
 }
 
-@media(max-width:768px) {
-  .intro-logo {
-    width: 100%;
-  }
-  }
+.header-logo {
+  height: 50px;
+}
 
+.intro-logo {
+    width: 100%;
+}
+
+.background-margin {
+  margin-bottom: 30px;
+}
 @media(min-width:768px) {
     .navbar-default {
         padding: 25px 0;
@@ -288,11 +293,6 @@ header .intro-text {
     padding-top: 100px;
 }
 
-.intro-logo {
-  width: 50%;
-  padding: 40px 0px;
-}
-
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
     font-family: {{ site.data.template.font.secondary }};
@@ -305,7 +305,7 @@ header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 700;
     line-height: 50px;
 }
@@ -314,6 +314,11 @@ header .intro-text .intro-heading {
     header .intro-text {
         padding-top: 200px;
         padding-bottom: 200px;
+    }
+
+    .intro-logo {
+      width: 50%;
+      padding: 40px 0px;
     }
 
     header .intro-text .intro-lead-in {
@@ -331,10 +336,6 @@ header .intro-text .intro-heading {
         font-size: 75px;
         font-weight: 700;
         line-height: 75px;
-    }
-
-    .header-logo {
-      height: 50px;
     }
 }
 
