--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,40 +3,24 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" action="https://formspree.io/ryan@espresso-solutions.co.uk" method="POST" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="control-group form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" name="name" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="control-group form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" id="email" name="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="control-group form-group">
-                                    <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" name="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
+                      <div class="row">
+                          <div class="col-lg-12 text-center" style="height: 20px;">
+                          </div>
+                            <div class="col-md-6 text-center message-us">
+                              <button type="submit" class="btn btn-xl" onclick='location.href="mailto:hello@nizatto.com?subject=Reach Out!"'>Send Us A Message</button>
                             </div>
-                            <div class="col-md-6">
-                                <div class="control-group form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" id="message" name="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
+                            <div class="col-md-6 text-center">
+                                <p style="font-size: 30px;"><a href="https://www.instagram.com/nizattodigital/" target="_blank" style="text-decoration: none;"><i class="fa fa-instagram"></i> @NizattoDigital</a></p>
+                                <p style="font-size: 30px;"><a href="https://www.facebook.com/nizatto/" target="_blank" style="text-decoration: none;"><i class="fa fa-facebook"></i> @Nizatto</a></p>
+                                <p style="font-size: 30px;"><a href="https://twitter.com/nizatto/" target="_blank" style="text-decoration: none;"><i class="fa fa-twitter"></i> @Nizatto</a></p>
+                                <p style="font-size: 30px;"><a href="https://www.linkedin.com/company/nizatto/" target="_blank" style="text-decoration: none;"><i class="fa fa-linkedin"></i> @Nizatto</a></p>
                             </div>
                             <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Send Message</button>
-                            </div>
                         </div>
-                    </form>
                 </div>
             </div>
         </div>
