--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -245,6 +245,15 @@ fieldset[disabled] .btn-xl.active {
 .background-margin {
   margin-bottom: 30px;
 }
+
+.message-us {
+    margin-top: 70px;
+}
+
+.contact-social>a:visited .contact-social>a:active .contact-social>a:hover {
+  font-size: 30px;
+  text-decoration: none;
+}
 @media(min-width:768px) {
     .navbar-default {
         padding: 25px 0;
@@ -312,7 +321,7 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 200px;
+        padding-top: 175px;
         padding-bottom: 200px;
     }
 
@@ -333,7 +342,7 @@ header .intro-text .intro-heading {
         margin-bottom: 50px;
         text-transform: uppercase;
         font-family: {{ site.data.template.font.primary }};
-        font-size: 75px;
+        font-size: 60px;
         font-weight: 700;
         line-height: 75px;
     }
