--- a/_includes/services.html
+++ b/_includes/services.html
@@ -8,23 +8,23 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Website Design & Development</h4>
-                    <p class="text-muted">We can build the vision you have for your website. We believe in beautiful, functional websites that communicate your branding. There are more businesses online than ever before; we can make yours stands out with a site that’s good-looking, up-to-date and easy to manage.</p>
+                    <h4 class="service-heading">Social Media Management</h4>
+                    <p class="text-muted">There’s an art to using social media for business and we’ve mastered it. Using basic principles and our up-to-the-minute knowledge of the ever-evolving online trends, we ensure that the right message gets to the right people, turning your social followers into customers. </p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-user-plus fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Social Media Management & Copywriting</h4>
-                    <p class="text-muted">There’s an art to using social media for business and we’ve mastered it. Using basic principles and our up-to-the-minute knowledge of the ever-evolving online trends, we ensure that the right message gets to the right people, turning your social followers into customers. </p>
+                    <h4 class="service-heading">Website Design & Development</h4>
+                    <p class="text-muted">We can build the vision you have for your website. We believe in beautiful, functional websites that communicate your branding. There are more businesses online than ever before; we can make yours stands out with a site that’s good-looking, up-to-date and easy to manage.</p>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-12">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-camera-retro fa-stack-1x fa-inverse"></i>
