--- a/_includes/services.html
+++ b/_includes/services.html
@@ -24,7 +24,7 @@
                     <h4 class="service-heading">Website Design & Development</h4>
                     <p class="text-muted">We can build the vision you have for your website. We believe in beautiful, functional websites that communicate your branding. There are more businesses online than ever before; we can make yours stands out with a site that’s good-looking, up-to-date and easy to manage.</p>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12" style="padding-top: 30px">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-camera-retro fa-stack-1x fa-inverse"></i>
