--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,6 +12,7 @@
                           </div>
                             <div class="col-md-6 text-center message-us">
                               <button type="submit" class="btn btn-xl" onclick='location.href="mailto:hello@nizatto.com?subject=Reach Out!"'>Send Us A Message</button>
+                              <p style="font-size: 30px; padding-top: 30px;"><a href="#" style="text-decoration: none;"><i class="fa fa-phone"></i> 01293 769 823</a></p>
                             </div>
                             <div class="col-md-6 text-center">
                                 <p style="font-size: 30px;"><a href="https://www.instagram.com/nizattodigital/" target="_blank" style="text-decoration: none;"><i class="fa fa-instagram"></i> @NizattoDigital</a></p>
